ipc/ipdl/test/ipdl/ok/multiStartState.ipdl
protocol multiStartState {

child: Msg();

start state S1:
    send Msg goto S1;

start state S2:
    send Msg goto S2;

};
